--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -5,62 +5,125 @@
    "id": "fb24857c",
    "metadata": {},
    "source": [
-    "# Introduction to Snowflake\n",
-    "---"
+    "---\n",
+    "# Introduction to Snowflake\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8701ca07",
+   "id": "ea0cdec3",
    "metadata": {},
    "source": [
-    "### Chapter 1 - Introduction to Snowflake\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fbe5cb63",
-   "metadata": {},
-   "source": [
+    "---\n",
+    "### Chapter 1: Introduction to Snowflake\n",
+    "\n",
+    "#### 1.1 Overview\n",
+    "\n",
     "Snowflake is a cloud-native data platform that redefines traditional data warehousing and analytics through a fully managed, multi-cluster, shared data architecture. Unlike conventional on-premises systems, Snowflake decouples storage and compute resources, allowing for elastic scalability, high concurrency, and cost-efficient usage across diverse workloads including SQL analytics, machine learning, and real-time data applications. Built from the ground up for cloud environments like Amazon Web Services, Microsoft Azure, and Google Cloud Platform, Snowflake eliminates the complexities of infrastructure management while ensuring secure, performant, and ACID-compliant data operations.\n",
     "\n",
-    "Leveraging native support for semi-structured data (e.g., JSON, Avro, Parquet), time travel, and zero-copy data sharing, Snowflake enables unified data engineering, business intelligence, and data science workflows within a single platform. Its architecture supports instant provisioning, automatic scaling, and cross-region collaboration, making it a powerful solution for enterprises seeking agility, governance, and interoperability in their data ecosystems. As a foundational component of modern data stacks, Snowflake serves as a catalyst for digital transformation across industries."
+    "#### 1.2 Architectural Design\n",
+    "\n",
+    "Snowflake’s architecture consists of three independently scalable layers: **storage**, **compute**, and **cloud services**. The storage layer provides centralized, compressed, and optimized columnar storage. The compute layer offers isolated virtual warehouses that process queries without resource contention. The cloud services layer handles metadata management, query parsing, access control, and optimization logic. This separation enables Snowflake to deliver high availability, workload isolation, and seamless scaling for concurrent users and applications.\n",
+    "\n",
+    "#### 1.3 Key Platform Capabilities\n",
+    "\n",
+    "Snowflake’s native support for semi-structured data formats such as JSON, Avro, and Parquet empowers organizations to analyze diverse data types using familiar SQL. Features like **Time Travel** and **Fail-safe** allow users to access historical versions of data and recover from accidental modifications. **Zero-copy cloning** and **data sharing** enable efficient data reuse and collaboration across teams and even organizations, without physically duplicating data.\n",
+    "\n",
+    "#### 1.4 Multi-Cloud Strategy\n",
+    "\n",
+    "Snowflake is deployed natively across all major cloud providers — Amazon Web Services, Microsoft Azure, and Google Cloud Platform — offering flexibility in infrastructure choice while maintaining a consistent user experience. This multi-cloud design enables customers to adopt hybrid strategies, ensure business continuity, and meet regional compliance requirements. Cross-cloud replication and global data sharing features further reinforce its enterprise-grade capabilities.\n",
+    "\n",
+    "#### 1.5 Role in the Modern Data Stack\n",
+    "\n",
+    "As a foundational component of the modern data stack, Snowflake bridges the gap between data engineering, business intelligence, and advanced analytics. It integrates seamlessly with tools for ELT (e.g., dbt, Fivetran), BI (e.g., Power BI, Tableau), and machine learning (e.g., DataRobot, H2O.ai). Its role extends from operational analytics to data science and governance, making it a catalyst for digital transformation across industries."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1357fb90",
+   "id": "08eacdba",
    "metadata": {},
    "source": [
-    "1.1 Evolution of Data Warehousing\n",
+    "---\n",
+    "### Chapter 2: Stages and Data Ingestion in \n",
     "\n",
-    "The history of data warehousing has evolved from monolithic, on-premises relational databases to highly elastic, cloud-native platforms. Traditional data warehouses often suffered from scalability limitations, complex maintenance, and siloed data systems. The rise of cloud computing introduced new paradigms for data storage and analytics, but early cloud solutions still retained many legacy constraints. Snowflake emerged as a modern, cloud-built alternative that reimagines the data warehouse from the ground up—decoupling storage and compute, optimizing cost-performance trade-offs, and enabling seamless, secure data sharing.\n",
     "\n",
-    "⸻\n",
+    "#### 2.1 What Are Stages in Snowflake?\n",
     "\n",
-    "1.2 Snowflake Architecture Overview\n",
+    "In Snowflake, a **stage** is a temporary or permanent location used to hold data files prior to loading them into a table or after unloading data from a table. Stages abstract the file storage layer from the compute layer, enabling scalable, fault-tolerant ingestion of batch and streaming data. Stages serve as the intermediate point between external data sources and Snowflake’s analytical engine, allowing Snowflake to process structured and semi-structured data (CSV, JSON, Avro, Parquet, ORC, etc.) using robust SQL-based operations.\n",
     "\n",
-    "Snowflake’s architecture is uniquely composed of three independently scalable layers: storage, compute, and cloud services. The storage layer handles the centralized, columnar storage of structured and semi-structured data. The compute layer consists of virtual warehouses that execute SQL queries in parallel without resource contention. Finally, the cloud services layer manages infrastructure coordination tasks such as metadata handling, query optimization, and security enforcement. This modular design not only enables horizontal scalability but also ensures efficient multi-user workload isolation.\n",
+    "#### 2.2 Purpose of Stages\n",
     "\n",
-    "⸻\n",
+    "The primary purposes of stages in Snowflake are:\n",
     "\n",
-    "1.3 Key Features of Snowflake\n",
+    "- **Data Ingestion:** Upload files to a stage before loading them into tables using the `COPY INTO` command.\n",
+    "- **Decoupling Compute from Storage:** Avoid direct table writes during ingestion, improving efficiency and fault isolation.\n",
+    "- **Temporary Storage:** Use temporary stages during ETL processes or for short-lived operations.\n",
+    "- **Data Export:** Export table data to a stage using the `COPY INTO` command in reverse.\n",
+    "- **Integration:** Enable connectors, scripts, and external tools to interact with Snowflake asynchronously.\n",
     "\n",
-    "Snowflake offers a suite of features that set it apart from conventional data platforms. These include elastic multi-cluster compute for handling variable workloads, native support for semi-structured formats like JSON and Avro, and zero-copy data sharing between tenants. Its Time Travel feature enables querying previous states of data, while Fail-safe ensures business continuity. Furthermore, Snowflake enforces strong data security practices, including end-to-end encryption and fine-grained access control. These capabilities empower organizations to implement robust, flexible, and governed data ecosystems.\n",
+    "Stages make Snowflake’s ingestion pipeline more modular and scalable, especially in multi-tenant or multi-cloud environments.\n",
     "\n",
-    "⸻\n",
+    "#### 2.3 Types of Stages in Snowflake\n",
     "\n",
-    "1.4 Cloud Deployment and Vendor Integration\n",
+    "Snowflake supports **three types of stages**, each with a specific use case:\n",
     "\n",
-    "Snowflake operates as a fully managed SaaS platform across Amazon Web Services (AWS), Microsoft Azure, and Google Cloud Platform (GCP), allowing customers to choose their preferred infrastructure while maintaining consistent functionality. It integrates seamlessly with modern data stacks, including BI tools (e.g., Tableau, Power BI), data ingestion platforms (e.g., Fivetran, Apache Kafka), and machine learning environments (e.g., DataRobot, SageMaker). This ecosystem compatibility simplifies architecture design, supports hybrid data flows, and enhances overall interoperability.\n",
+    "##### 1. User Stages\n",
+    "- Automatically created for every Snowflake user.\n",
+    "- Named as `@~`\n",
+    "- Only accessible by the specific user.\n",
+    "- Typically used for small, ad-hoc file uploads during testing or experimentation.\n",
     "\n",
-    "⸻\n",
+    "##### 2. Table Stages\n",
+    "- Automatically created for every Snowflake table.\n",
+    "- Named as `@%<table_name>`\n",
+    "- Used for loading data into or unloading data from a specific table.\n",
+    "- Ensures tight coupling of the data and its schema context.\n",
     "\n",
-    "1.5 Use Cases Across Industries\n",
+    "##### 3. Named Stages\n",
+    "- Manually created using the `CREATE STAGE` command.\n",
+    "- Can be **internal** (hosted within Snowflake) or **external** (linked to AWS S3, Azure Blob, or GCP Cloud Storage).\n",
+    "- Ideal for production pipelines and large-scale ETL operations.\n",
     "\n",
-    "Snowflake’s versatility enables impactful use cases across diverse industry sectors. In finance, it supports real-time fraud detection and regulatory compliance. In retail, businesses use it for customer segmentation and inventory optimization. Healthcare organizations benefit from HIPAA-compliant analytics over FHIR and HL7 data. Public sector agencies utilize Snowflake for secure inter-departmental data sharing. For startups and SMBs, its usage-based pricing and instant scalability make it a cost-effective choice for building data-driven products and insights pipelines.\n"
+    "Each type offers different levels of **visibility, security, lifecycle management**, and **integration flexibility**.\n",
+    "\n",
+    "#### 2.4 Data Ingestion Workflow\n",
+    "\n",
+    "Data ingestion into Snowflake typically follows these steps:\n",
+    "\n",
+    "1. **Upload files to a stage**  \n",
+    "   - Use `PUT` command for internal stages  \n",
+    "   - Use Snowpipe, SDKs, or cloud-native triggers for external stages\n",
+    "\n",
+    "2. **Preview staged files**  \n",
+    "   - Use `LIST @stage_name` to confirm successful uploads\n",
+    "\n",
+    "3. **Load into tables**  \n",
+    "   - Use the `COPY INTO <table>` command to load data from the stage\n",
+    "   - Apply file format settings (e.g., CSV delimiter, JSON path, etc.)\n",
+    "\n",
+    "4. **Post-load cleanup (optional)**  \n",
+    "   - Remove staged files with `REMOVE @stage_name` if they are no longer needed\n",
+    "\n",
+    "5. **Automation (optional)**  \n",
+    "   - Use **Snowpipe** for continuous loading from external stages using event-based triggers or REST APIs\n",
+    "\n",
+    "#### 📌 Example: Ingesting a CSV File via Internal Stage\n",
+    "\n",
+    "```sql\n",
+    "-- Step 1: Upload the file from your local machine\n",
+    "PUT file://local_path/mydata.csv @my_internal_stage;\n",
+    "\n",
+    "-- Step 2: Load the data into a Snowflake table\n",
+    "COPY INTO my_table\n",
+    "FROM @my_internal_stage\n",
+    "FILE_FORMAT = (TYPE = 'CSV' FIELD_OPTIONALLY_ENCLOSED_BY = '\"' SKIP_HEADER = 1);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82455a90",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
