added more examples

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Chapter 2: Stages and Data Ingestion in \n",
+    "### Chapter 2: Stages and Data Ingestion in Snowflake\n",
     "\n",
     "\n",
     "#### 2.1 What Are Stages in Snowflake?\n",
@@ -107,16 +107,68 @@
     "5. **Automation (optional)**  \n",
     "   - Use **Snowpipe** for continuous loading from external stages using event-based triggers or REST APIs\n",
     "\n",
-    "#### 📌 Example: Ingesting a CSV File via Internal Stage\n",
+    "\n",
+    "   #### 📌 Extended Examples: Ingesting Data into Snowflake\n",
+    "\n",
+    "Below are several examples demonstrating how to ingest CSV data into Snowflake from both internal and external stages. Each example is annotated with comments and accompanied by explanatory text.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### 🔹 Example 1: Upload and Load CSV via Internal Stage\n",
+    "\n",
+    "This is the most basic and direct approach to load data from a local machine into Snowflake using an internal stage.\n",
     "\n",
     "```sql\n",
-    "-- Step 1: Upload the file from your local machine\n",
+    "-- Step 1: Upload a file from your local system to an internal stage\n",
+    "-- Note: This command must be run from SnowSQL or another supported client.\n",
     "PUT file://local_path/mydata.csv @my_internal_stage;\n",
     "\n",
-    "-- Step 2: Load the data into a Snowflake table\n",
+    "-- Step 2: Load the staged file into a Snowflake table\n",
     "COPY INTO my_table\n",
     "FROM @my_internal_stage\n",
-    "FILE_FORMAT = (TYPE = 'CSV' FIELD_OPTIONALLY_ENCLOSED_BY = '\"' SKIP_HEADER = 1);"
+    "FILE_FORMAT = (\n",
+    "    TYPE = 'CSV'                     -- Specify that the source file is in CSV format\n",
+    "    FIELD_OPTIONALLY_ENCLOSED_BY = '\"'  -- Handle values enclosed in double quotes\n",
+    "    SKIP_HEADER = 1                 -- Skip the first row (header row)\n",
+    ");\n",
+    "\n",
+    "\n",
+    "\n",
+    "##### 🔹 Example 2: Loading Multiple Files from a Named Internal Stage\n",
+    "\n",
+    "You can upload multiple files to a named internal stage and then bulk load them into a target table.\n",
+    "\n",
+    "-- Assume the files are already uploaded to the named stage: @my_stage\n",
+    "-- You can use LIST to verify uploaded files:\n",
+    "LIST @my_stage;\n",
+    "\n",
+    "-- Load all files in the stage into the destination table\n",
+    "COPY INTO sales_data\n",
+    "FROM @my_stage\n",
+    "FILE_FORMAT = (\n",
+    "    TYPE = 'CSV'\n",
+    "    FIELD_DELIMITER = ','           -- Specify delimiter if not using default\n",
+    "    SKIP_HEADER = 1\n",
+    "    ERROR_ON_COLUMN_COUNT_MISMATCH = FALSE  -- Useful if file column count is inconsistent\n",
+    ");\n",
+    "\n",
+    "##### 🔹 Example 3: Ingesting from External Stage (e.g., AWS S3)\n",
+    "\n",
+    "To ingest from an external cloud location (e.g., Amazon S3), you must create an external stage and reference it in the COPY INTO command.\n",
+    "\n",
+    "-- Create the external stage referencing your S3 bucket\n",
+    "CREATE OR REPLACE STAGE s3_stage\n",
+    "URL = 's3://my-bucket-name/snowflake-data/'\n",
+    "STORAGE_INTEGRATION = my_s3_integration;\n",
+    "\n",
+    "-- Load data from the external stage\n",
+    "COPY INTO inventory_table\n",
+    "FROM @s3_stage\n",
+    "FILE_FORMAT = (\n",
+    "    TYPE = 'CSV'\n",
+    "    FIELD_OPTIONALLY_ENCLOSED_BY = '\"'\n",
+    "    SKIP_HEADER = 1\n",
+    ");"
    ]
   },
   {
