added chapter on snowflake objects

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -175,7 +175,126 @@
    "cell_type": "markdown",
    "id": "82455a90",
    "metadata": {},
-   "source": []
+   "source": [
+    "---\n",
+    "### Chapter 3: Snowflake Objects\n",
+    "\n",
+    "Snowflake’s architecture is centered around logical and physical **objects** that serve as building blocks for storing, managing, querying, and securing data. Understanding these objects is crucial for effective data modeling, ETL pipeline design, and access control. Objects in Snowflake range from core database components like tables and views to administrative elements like roles and warehouses.\n",
+    "\n",
+    "\n",
+    "#### 3.1 Databases and Schemas\n",
+    "\n",
+    "- A **database** in Snowflake is a logical container that holds schemas, tables, views, and other related objects. Each user can create and manage multiple databases for different projects or environments.\n",
+    "- A **schema** is a namespace within a database used to organize and categorize database objects. Schemas allow fine-grained permission control and help segment logical domains within the same database.\n",
+    "\n",
+    "```sql\n",
+    "-- Example: Create a database and schema\n",
+    "CREATE OR REPLACE DATABASE sales_data;\n",
+    "CREATE OR REPLACE SCHEMA sales_data.january2025;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### 3.2 Tables\n",
+    "\n",
+    "Tables are the primary storage object in Snowflake. They come in several types:\n",
+    "\n",
+    "- **Permanent Tables:** Store persistent data and are included in backups and fail-safe.\n",
+    "- **Temporary Tables:** Exist only for the duration of the session; useful for intermediate steps.\n",
+    "- **Transient Tables:** Persist across sessions but are excluded from fail-safe; cost-efficient for staging.\n",
+    "\n",
+    "```sql\n",
+    "-- Example: Create different types of tables\n",
+    "CREATE OR REPLACE TABLE customers (\n",
+    "    id INT, name STRING, email STRING\n",
+    ");\n",
+    "\n",
+    "CREATE TEMPORARY TABLE temp_aggregation AS\n",
+    "SELECT region, SUM(revenue)\n",
+    "FROM sales_data.january2025.orders\n",
+    "GROUP BY region;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### 3.3 Views and Materialized Views\n",
+    "\n",
+    "- **Views** are virtual tables defined by a `SELECT` query. They do not store data but reflect the result set dynamically.\n",
+    "- **Materialized Views** physically store the results of a query and automatically update on base table changes.\n",
+    "\n",
+    "```sql\n",
+    "-- Regular View\n",
+    "CREATE OR REPLACE VIEW customer_summary AS\n",
+    "SELECT id, name, COUNT(*) AS order_count\n",
+    "FROM orders\n",
+    "GROUP BY id, name;\n",
+    "\n",
+    "-- Materialized View\n",
+    "CREATE MATERIALIZED VIEW recent_orders AS\n",
+    "SELECT *\n",
+    "FROM orders\n",
+    "WHERE order_date > CURRENT_DATE - INTERVAL '30 days';\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### 3.4 Stages\n",
+    "\n",
+    "Stages are intermediate storage locations for file-based ingestion and unloading. (See Chapter 2 for a detailed explanation.)\n",
+    "\n",
+    "\n",
+    "#### 3.5 File Formats\n",
+    "\n",
+    "A file format object defines how external files should be interpreted during ingestion or export. It includes settings like delimiter, encoding, header skipping, etc.\n",
+    "\n",
+    "```sql\n",
+    "-- Define a reusable CSV file format\n",
+    "CREATE OR REPLACE FILE FORMAT my_csv_format\n",
+    "TYPE = 'CSV'\n",
+    "FIELD_OPTIONALLY_ENCLOSED_BY = '\"'\n",
+    "SKIP_HEADER = 1;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### 3.6 Warehouses\n",
+    "\n",
+    "A **warehouse** is a virtual compute cluster that executes SQL queries and data loading/unloading operations. Warehouses can scale dynamically, suspend automatically when idle, and resume on demand.\n",
+    "\n",
+    "```sql\n",
+    "-- Example: Create a virtual warehouse\n",
+    "CREATE OR REPLACE WAREHOUSE etl_warehouse\n",
+    "WITH WAREHOUSE_SIZE = 'XSMALL'\n",
+    "AUTO_SUSPEND = 300\n",
+    "AUTO_RESUME = TRUE\n",
+    "INITIALLY_SUSPENDED = TRUE;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### 3.7 Roles and Users\n",
+    "\n",
+    "- **Users** represent individual logins to the Snowflake system.\n",
+    "- **Roles** define permissions and access levels to objects across databases and schemas. Snowflake uses a role-based access control (RBAC) system.\n",
+    "\n",
+    "```sql\n",
+    "-- Example: Create a role and grant it access\n",
+    "CREATE ROLE data_analyst;\n",
+    "GRANT USAGE ON DATABASE sales_data TO ROLE data_analyst;\n",
+    "GRANT SELECT ON ALL TABLES IN SCHEMA sales_data.january2025 TO ROLE data_analyst;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### 3.8 Sequences and Streams\n",
+    "\n",
+    "- **Sequences** are used to generate auto-incrementing numeric values, commonly for surrogate keys.\n",
+    "- **Streams** enable **Change Data Capture (CDC)** by tracking inserts, updates, and deletes on a table.\n",
+    "\n",
+    "```sql\n",
+    "-- Example: Create and use a sequence\n",
+    "CREATE OR REPLACE SEQUENCE order_id_seq START = 1000 INCREMENT = 1;\n",
+    "\n",
+    "-- Example: Create a stream to track changes\n",
+    "CREATE OR REPLACE STREAM order_changes ON TABLE orders;\n",
+    "```\n",
+    "\n",
+    "This chapter provides a foundational understanding of Snowflake’s core objects, preparing you for advanced topics like data modeling, performance tuning, and security enforcement in future chapters.\n"
+   ]
   }
  ],
  "metadata": {
