added section on databases and schemas

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -5,7 +5,7 @@
    "id": "fb24857c",
    "metadata": {},
    "source": [
-    "---\n",
+    "\n",
     "# Introduction to Snowflake\n"
    ]
   },
@@ -14,7 +14,7 @@
    "id": "ea0cdec3",
    "metadata": {},
    "source": [
-    "---\n",
+    "\n",
     "### Chapter 1: Introduction to Snowflake\n",
     "\n",
     "#### 1.1 Overview\n",
@@ -43,7 +43,7 @@
    "id": "08eacdba",
    "metadata": {},
    "source": [
-    "---\n",
+    "\n",
     "### Chapter 2: Stages and Data Ingestion in Snowflake\n",
     "\n",
     "\n",
@@ -112,7 +112,7 @@
     "\n",
     "Below are several examples demonstrating how to ingest CSV data into Snowflake from both internal and external stages. Each example is annotated with comments and accompanied by explanatory text.\n",
     "\n",
-    "---\n",
+    "\n",
     "\n",
     "##### 🔹 Example 1: Upload and Load CSV via Internal Stage\n",
     "\n",
@@ -176,7 +176,7 @@
    "id": "82455a90",
    "metadata": {},
    "source": [
-    "---\n",
+    "\n",
     "### Chapter 3: Snowflake Objects\n",
     "\n",
     "Snowflake’s architecture is centered around logical and physical **objects** that serve as building blocks for storing, managing, querying, and securing data. Understanding these objects is crucial for effective data modeling, ETL pipeline design, and access control. Objects in Snowflake range from core database components like tables and views to administrative elements like roles and warehouses.\n",
@@ -294,6 +294,114 @@
     "```\n",
     "\n",
     "This chapter provides a foundational understanding of Snowflake’s core objects, preparing you for advanced topics like data modeling, performance tuning, and security enforcement in future chapters.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5967a9bb",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Chapter 4: Databases and Schemas in Snowflake (Command Reference)\n",
+    "\n",
+    "This chapter introduces the essential SQL commands for interacting with databases and schemas in Snowflake. These commands cover creation, exploration, modification, and recovery operations — providing both practical usage and system metadata access.\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 🔍 Querying Table Data\n",
+    "\n",
+    "```sql\n",
+    "-- View all records from a table in a specific schema\n",
+    "SELECT * FROM RAW_POS.MENU;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 🧾 Viewing Table Metadata\n",
+    "\n",
+    "```sql\n",
+    "-- Explore metadata for all tables in a database\n",
+    "SELECT * FROM TASTY_BYTES.INFORMATION_SCHEMA.TABLES;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 🏗️ Creating and Managing a Database\n",
+    "\n",
+    "```sql\n",
+    "-- Create a test database\n",
+    "CREATE DATABASE test_database;\n",
+    "\n",
+    "-- View all databases in your Snowflake account\n",
+    "SHOW DATABASES;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### ❌ Dropping and 🔄 Recovering a Database\n",
+    "\n",
+    "```sql\n",
+    "-- Drop the database\n",
+    "DROP DATABASE test_database;\n",
+    "\n",
+    "-- Recover the dropped database (only possible within fail-safe retention period)\n",
+    "UNDROP DATABASE test_database;\n",
+    "\n",
+    "-- Confirm recovery\n",
+    "SHOW DATABASES;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 📌 Selecting a Database for Use\n",
+    "\n",
+    "```sql\n",
+    "-- Set a specific database context for subsequent operations\n",
+    "USE DATABASE test_database;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 🗂️ Creating and Exploring a Schema\n",
+    "\n",
+    "```sql\n",
+    "-- Create a schema within the current database\n",
+    "CREATE SCHEMA test_schema;\n",
+    "\n",
+    "-- List available schemas\n",
+    "SHOW SCHEMAS;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 📑 Viewing Database Metadata\n",
+    "\n",
+    "```sql\n",
+    "-- Describe metadata for the selected database\n",
+    "DESCRIBE DATABASE test_database;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 🧹 Dropping and 🔄 Undropping a Schema\n",
+    "\n",
+    "```sql\n",
+    "-- Drop a schema (removes objects but allows recovery)\n",
+    "DROP SCHEMA test_schema;\n",
+    "\n",
+    "-- Verify schema removal\n",
+    "SHOW SCHEMAS;\n",
+    "\n",
+    "-- Recover the dropped schema\n",
+    "UNDROP SCHEMA test_schema;\n",
+    "\n",
+    "-- Confirm schema restoration\n",
+    "SHOW SCHEMAS;\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "This command set provides a foundational toolkit for managing Snowflake databases and schemas, supporting both operational and metadata-level tasks. Use these commands to structure your data warehouse effectively and recover gracefully from unintended deletions.\n"
    ]
   }
  ],
