--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -402,6 +402,100 @@
     "\n",
     "This command set provides a foundational toolkit for managing Snowflake databases and schemas, supporting both operational and metadata-level tasks. Use these commands to structure your data warehouse effectively and recover gracefully from unintended deletions.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aca594b",
+   "metadata": {},
+   "source": [
+    "### Chapter 5: Working with Tables in Snowflake\n",
+    "\n",
+    "Tables are the core objects for storing structured data in Snowflake. This chapter covers how to create, query, insert into, drop, recover, and inspect tables using SQL commands.\n",
+    "\n",
+    "#### 5.1 Creating a Table\n",
+    "\n",
+    "You can create a table by specifying column names and their data types. Snowflake supports a wide range of native types including numeric, text, date/time, semi-structured (VARIANT), and spatial (GEOGRAPHY).\n",
+    "\n",
+    "```sql\n",
+    "CREATE TABLE TEST_TABLE (\n",
+    "    TEST_NUMBER NUMBER,\n",
+    "    TEST_VARCHAR VARCHAR,\n",
+    "    TEST_BOOLEAN BOOLEAN,\n",
+    "    TEST_DATE DATE,\n",
+    "    TEST_VARIANT VARIANT,\n",
+    "    TEST_GEOGRAPHY GEOGRAPHY\n",
+    ");\n",
+    "```\n",
+    "\n",
+    "#### 5.2 Querying a Table\n",
+    "\n",
+    "Use a `SELECT` statement to retrieve data from a table. Fully qualified names help access tables across databases and schemas.\n",
+    "\n",
+    "```sql\n",
+    "SELECT * FROM TEST_DATABASE.TEST_SCHEMA.TEST_TABLE;\n",
+    "```\n",
+    "\n",
+    "#### 5.3 Inserting Data into a Table\n",
+    "\n",
+    "Insert new rows using the `INSERT INTO` command. All values must match the column order and data types defined in the table.\n",
+    "\n",
+    "```sql\n",
+    "INSERT INTO TEST_DATABASE.TEST_SCHEMA.TEST_TABLE\n",
+    "VALUES (28, 'ha!', TRUE, '2024-01-01', NULL, NULL);\n",
+    "```\n",
+    "\n",
+    "```sql\n",
+    "SELECT * FROM TEST_DATABASE.TEST_SCHEMA.TEST_TABLE;\n",
+    "```\n",
+    "\n",
+    "#### 5.4 Dropping and Undropping Tables\n",
+    "\n",
+    "Tables can be removed using the `DROP TABLE` command. If the drop was accidental, the table can be recovered within the data retention period using `UNDROP`.\n",
+    "\n",
+    "```sql\n",
+    "DROP TABLE TEST_DATABASE.TEST_SCHEMA.TEST_TABLE;\n",
+    "\n",
+    "UNDROP TABLE TEST_DATABASE.TEST_SCHEMA.TEST_TABLE;\n",
+    "```\n",
+    "\n",
+    "#### 5.5 Exploring Table Metadata\n",
+    "\n",
+    "You can inspect table metadata using `SHOW` commands. These commands are helpful for tracking table existence and structure within specific schemas or the entire account.\n",
+    "\n",
+    "```sql\n",
+    "SHOW TABLES IN TEST_DATABASE.TEST_SCHEMA;\n",
+    "\n",
+    "SHOW TABLES;\n",
+    "```\n",
+    "\n",
+    "#### 5.6 Storage Usage of Tables\n",
+    "\n",
+    "Snowflake allows querying storage metrics via the internal `ACCOUNT_USAGE` schema to understand space utilization.\n",
+    "\n",
+    "```sql\n",
+    "SELECT * FROM SNOWFLAKE.ACCOUNT_USAGE.TABLE_STORAGE_METRICS;\n",
+    "```\n",
+    "\n",
+    "#### 5.7 Practical Example: Creating a Transaction Table\n",
+    "\n",
+    "Here is a more complex example with multiple numeric and text columns, useful for transactional data such as order details.\n",
+    "\n",
+    "```sql\n",
+    "CREATE TABLE tasty_bytes.raw_pos.order_detail (\n",
+    "    order_detail_id NUMBER(38,0),\n",
+    "    order_id NUMBER(38,0),\n",
+    "    menu_item_id NUMBER(38,0),\n",
+    "    discount_id VARCHAR(16777216),\n",
+    "    line_number NUMBER(38,0),\n",
+    "    quantity NUMBER(5,0),\n",
+    "    unit_price NUMBER(38,4),\n",
+    "    price NUMBER(38,4),\n",
+    "    order_item_discount_amount VARCHAR(16777216)\n",
+    ");\n",
+    "```\n",
+    "\n",
+    "Understanding how to work with tables is essential to leveraging Snowflake’s capabilities for data storage, analytics, and data engineering.\n"
+   ]
   }
  ],
  "metadata": {
